# voi-remsen

./: .gitignore  LITERATURE_AND_CODE_REVIEW.md  README.md  pyproject.toml
R/: fit_toxicity_msm.R
data-acquisition/: calhabmap.csv  location_data_match.py  matchup_table_sitexweek.csv  paths.py  plot_coverage.py
data/input/: CDPH_tissueDA.xlsx
data/interim/: calhabmap_weekly.csv  cdph_weekly.csv  cdph_weekly_3km.csv  cdph_weekly_5km.csv  cell_panel.csv  joint_panel.csv  joint_panel_3km.csv  joint_panel_5km.csv  toxicity_panel.csv
data/output/: match_radius_summary.csv  matchups_by_station_3km.csv  matchups_by_station_5km.csv  msm_tox_K2.rds  msm_tox_K3.rds  msm_tox_K4.rds  msm_tox_modelsel.csv  seasonal_compare.csv  worldmodel.npz  worldmodel_compare.csv  worldmodel_kscan.csv  worldmodel_modelsel.csv
docs/: methodology.md
notebooks/reference/: README_arcieri.md
reports/: VOI_REMSEN_CODEBASE_STATISTICAL_LOGIC_REVIEW_2026-07-22.docx
scripts/: 00_build_panels.py  01_fit_worldmodel.py  02_fit_seasonal.py  03_match_radius_scan.py
src/voi_remsen/: __init__.py  config.py  data.py  paths.py  viz.py
src/voi_remsen/worldmodel/: __init__.py  emissions.py  export.py  factorial.py  lfo.py  linalg.py  model.py  seasonal.py  selection.py  simulate.py  tissue.py
