[project]
name = "voi-remsen"
version = "0.1.0"
description = "Value of remote sensing for HAB early-closure decisions (world model + POMDP decision model)"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "openpyxl",   # CDPH .xlsx
    "matplotlib", # coverage heatmap
]

[project.optional-dependencies]
# Phase C world-model inference (joint two-marker continuous-time HMM)
worldmodel = ["pymc", "nutpie", "arviz"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
